Fix overlap testing under root-layer scrolls

Description TODO

Bug: 777672
Change-Id: I5e302f3f29775d829b94593e8053025c5da0f980